Layout margin, padding and alignment fixes

--- a/pi-sensor-app/www/css/style.css
+++ b/pi-sensor-app/www/css/style.css
@@ -29,3 +29,23 @@ md-list-item ._md-list-item-inner > ._md-list-item-inner > p {
   /* IE 10+ */
   user-select: none;
   /* Likely future */ }
+
+.side-menu {
+}
+
+.side-menu-dates {
+  /*padding: 0 16px;*/
+}
+
+.side-menu md-divider {
+  margin-top: 5px;
+  margin-bottom: 0; }
+
+.side-menu md-list-item md-switch{
+  margin: 0;
+  padding: 0;
+}
+
+.side-menu-list {
+  padding: 0;
+}
